# pyvecdb

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  test.py
examples/: demo.py
pyvecdb/: __init__.py
src/: Distance.cpp  Distance.cu  Distance.h  Index.h  IndexFlat.cpp  IndexFlat.h  IndexHNSW.cpp  IndexHNSW.h  IndexIVF.cpp  IndexIVF.h  Utils.cpp  Utils.h  bindings.cpp
